<resources>
    <string name="app_name">Voice Analyzer</string>
    <string name="analysis_voice">Анализ голоса</string>
    <string name="synthesis_voice">Синтез голоса</string>
    <string name="change">Изменить</string>
    <string name="analysis_type_template">Анализ: %s</string>
    <string name="recording">Запись</string>
    <string name="play">Воспроизвести</string>
    <string name="show_spectrogram">Показать спектрограмму</string>
    <string name="characteristics">Характеристики</string>
    <string name="f0">F0</string>
    <string name="jitter">Джиттер</string>
    <string name="shimmer">Шиммер</string>
    <string name="npr">HNR</string>
    <string name="intensity">Громкость</string>
    <string name="phonation_time">Время фонации</string>
    <string name="formant_1">F1</string>
    <string name="formant_2">F2</string>
    <string name="formant_3">F3</string>
    <string name="cosine_similarity_label">Сходство</string>
    <string name="select_analysis_type">Выберите тип анализа</string>
    <string name="speech">Разговорная речь</string>
    <string name="letter_a">Буква А</string>
    <string name="letter_e">Буква Е</string>
    <string name="letter_u">Буква У</string>
    <string name="default_analysis_type">Буква А</string>
    <string name="spectrogram_title">Спектрограмма</string>
    <string name="start_recording">Начать запись</string>
    <string name="stop_recording">Остановить запись</string>
    <string name="main_menu">Главное меню</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="title_activity_spectrogram">SpectrogramActivity</string>
    <string name="session_button_text">Занятие</string>
    <string name="patients_title">Пациенты</string>
    <string name="patient_label">Пациент</string>
    <string name="age_label">Возраст</string>
    <string name="add_patient_button">Добавить пациента</string>
    <string name="start_session_button">Начать Занятие</string>
    <string name="delete_patient_content_description">Удалить пациента</string>
    <string name="dialog_add_patient_title">Добавить нового пациента</string>
    <string name="hint_first_name">Имя</string>
    <string name="hint_last_name">Фамилия</string>
    <string name="hint_age">Возраст</string>
    <string name="add_button">Добавить</string>
    <string name="cancel_button">Отмена</string>
    <string name="years_single">год</string>
    <string name="years_few">года</string>
    <string name="years_many">лет</string>
    <string name="error_fill_all_fields">Пожалуйста, заполните все поля</string>
    <string name="error_invalid_age">Некорректный возраст</string>
    <string name="session_started_placeholder">Занятие начато (заглушка)</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- ... other strings ... -->
    <string name="session_title">Занятие</string>
    <string name="letter_label">Фонема:</string>
    <string name="change_button">Изменить</string>
    <string name="recording_current_label">Запись</string>
    <string name="make_reference">Сделать эталоном</string>
    <string name="recording_reference_label">Эталонная запись</string>
    <string name="start_recording_session">Начать запись для сессии</string>
    <string name="stop_recording_session">Остановить запись для сессии</string>
    <string name="default_letter">А</string>
    <string name="prompt_enter_letter">Введите Фонему</string>
    <string name="invalid_letter_toast">Неверная Фонема. Введите одну русскую букву, которая представляет фонему.</string>
    <string name="no_current_recording_to_make_reference">Нет текущей записи для установки как эталон.</string>
    <string name="reference_set_successfully">Эталонная запись установлена.</string>
    <string name="error_setting_reference">Ошибка установки эталона.</string>
    <string name="file_not_found_for_playback">Файл для воспроизведения не найден.</string>
    <string name="no_patient_id_found">ID пациента не найден.</string>
    <string name="patient_not_found_in_db">Пациент не найден в базе данных.</string>
    <string name="session_data_loaded">Данные сессии загружены.</string>
    <string name="new_session_created">Новая сессия создана.</string>
    <string name="error_loading_session_data">Ошибка загрузки данных сессии.</string>
    <string name="path_cleared_in_db">Путь к файлу удален из БД.</string>
    <string name="error_clearing_path_in_db">Ошибка удаления пути из БД.</string>
    <string name="audio_file_deleted">Аудиофайл удален: %s</string>
    <string name="audio_file_not_deleted">Не удалось удалить аудиофайл: %s</string>
    <string name="year_1_format">%d год</string>
    <string name="year_2_4_format">%d года</string>
    <string name="year_5_0_format">%d лет</string>
    <string name="patient_id_extra">patient_id_extra</string> <!-- Make sure this matches your calling activity string -->
    <string name="select_patient_to_start">Выберите пациента для начала сессии</string>

    <string name="save_current_recording">Сохранить текущую запись</string>
    <string name="load_file">Загрузить файл</string>
    <string name="file_saved_successfully_to">Файл сохранен в: %s</string>
    <string name="file_save_failed">Не удалось сохранить файл.</string>
    <string name="file_save_cancelled">Сохранение файла отменено.</string>
    <string name="audio_file_loaded_as_reference">Аудиофайл загружен как эталон.</string>
    <string name="audio_file_load_failed">Не удалось загрузить аудиофайл.</string>
    <string name="audio_file_load_cancelled">Загрузка файла отменена.</string>
    <string name="error_copying_loaded_file">Ошибка копирования загруженного файла.</string>
    <string name="select_audio_file_title">Выберите аудиофайл</string>
    <string name="save_audio_file_title">Сохранить аудио как</string>

    <string name="file_saved_successfully_to_selected_place">Файл успешно сохранен</string>
    <string name="error_updating_path_in_db">Ошибка обновления пути в БД</string>


    <string name="characteristic_name_header">Параметр</string>
    <string name="current_header_short">Тек.</string>
    <string name="reference_header_short">Этал.</string>

    <string name="parameters_header">Параметр</string>
    <string name="current_value_header_short">Знач.</string>
</resources>